--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'javax.inject:javax.inject:1' //gradle 추가 필수
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 test {
